--- a/templates/play_uploaded_game.html
+++ b/templates/play_uploaded_game.html
@@ -5,9 +5,9 @@
 {% block content %}
 <main>
   <section class="hero">
-    <div class="kicker"><span class="dot"></span>PLAYING UPLOADED GAME</div>
-    <h1>{{ game.filename or 'Untitled Game' }}</h1>
-    <p class="sub">HTML Game • Click to start playing</p>
+    <div class="kicker"><span class="dot"></span>PLAYING CREATED GAME</div>
+    <h1>{{ game.title or 'Untitled Game' }}</h1>
+    <p class="sub">Click to start playing</p>
   </section>
 
   <section class="section">
